feat(#174660): add new code conventions rules